# wonder

./: 0.bootstrap.js  Cargo.toml  README.md  index.html
docs/: 0.bootstrap.js  bootstrap.js  index.html  style.css  wonder.js  wonder_bg.wasm
legacy/: _native.rs
legacy/game/: mod.rs  state.rs
legacy/system/: mod.rs
legacy/web/: .gitignore  index.html  package-lock.json  package.json  ui.js  wonder_bg.js  wonder_bg.wasm
res/wasm/: wonder.js  wonder_bg.js  wonder_bg.wasm
resources/: index.html  style.css
resources/wasm/: wonder.js  wonder_bg.js  wonder_bg.wasm
src/: lib.rs
src/component/: left_mover.rs  left_walker.rs  mod.rs  position.rs  renderable.rs
src/game/: mod.rs  state.rs
src/game/comp/: mod.rs  movement.rs  position.rs  renderable.rs
src/game/ent/: mod.rs  player.rs
src/game/sys/: mod.rs  walker.rs
src/system/: mod.rs  walk.rs
src/wasm/: mod.rs
web/: draw.js  index.html  index.js  package-lock.json  package.json  render.js  sprites.js  symbols.js
