[package]
name = "wonder"
version = "0.1.0"
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
edition = "2018"
repository = "https://github.com/FreddyWordingham/wonder"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# arctk-attr = { path = "../arctk-attr" }
# arctk-proc = { path = "../arctk-proc" }
arctk-attr = "0.1.*"
arctk-proc = "0.1.*"

# console_error_panic_hook = { version = "0.1.*", optional = true }
# js-sys = "0.3.*"
wasm-bindgen = "0.2.*"
# web-sys = { version = "0.3.*", features = ["console"]}
# wee_alloc = { version = "0.4.5", optional = true }

rltk = { version = "0.8.*" }
specs = "0.16.*"
specs-derive = "0.4.*"
ndarray = "0.13.*"
