[package]
name = "wonder"
version = "0.1.0"
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
description = "Wonder console based RPG"
repository = "https://github.com/FreddyWordingham/wonder"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ecs"]
categories = ["simulation"]
edition = "2018"
documentation = "https://freddywordingham.github.io/wonder"
exclude = ["docs/"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arctk-attr = "0.2.*"
arctk-proc = "0.3.*"
arctk = { version="0.12.*", features=["terminal_size"] }

console_error_panic_hook = { version = "0.1.*", optional = true }
js-sys = "0.3.*"
ndarray = "0.13.*"
wasm-bindgen = "0.2.*"
wee_alloc = { version = "0.4.*", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.*"

[profile.release]
opt-level = 0
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[dependencies.web-sys]
version = "0.3"
features = ["console"]
